# emoji-concepts

./: .env.template  .gitignore  Makefile  README.md  data.py  main.py  package-lock.json  pyproject.toml  tailwind.config.js
scripts/: bootstrap_server.md  deploy_app.sh  deploy_nginx.sh  deploy_supervisor.sh  install_tailwind.sh  nginx.conf  nginx.conf.template  supervisor.conf
static/: style.css  tailwind.css
templates/: footer.html  main.html  nav.html  search.html
