[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.11"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
aiofiles = "^0.7.0"
Jinja2 = "3.0.3"
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.19"
stripe = "^5.5.0"
json5 = "^0.9.14"
openai = "^0.27.8"
retry = "^0.9.2"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"